# career-match-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker-image.yml  integration-live.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_agent_output.py  0003_jd_cache.py  0004_indexes.py
docs/: agent-prompts.md  orchestration-decisions.md  system-design.md
scripts/: seed.py  skills.json
src/pelgo/: worker_main.py
src/pelgo/adapters/llm/: langchain_openai_client.py  null_client.py
src/pelgo/adapters/persistence/: postgres_job_repository.py
src/pelgo/adapters/pii/: simple_redactor.py
src/pelgo/adapters/tools/: tool_suite.py
src/pelgo/api/: app.py  main.py  schemas.py
src/pelgo/application/: config.py  langgraph_graph.py  langgraph_orchestrator.py  llm_factory.py  logging.py  orchestrator.py  orchestrator_factory.py  runner.py  state.py  tool_registry.py
src/pelgo/application/bootstrap/: llm.py  pii.py  tools.py
src/pelgo/application/orchestration/: factory.py  langgraph_graph.py  langgraph_orchestrator.py  state.py  (+1 more)
src/pelgo/ports/: llm.py  persistence.py  pii.py  tooling.py
src/pelgo/prompts/: extract_jd_requirements.txt  templates.py
tests/: conftest.py  test_api_schema_validation.py  test_candidate_profile_extraction.py  test_integration_flow.py  test_jd_url_tool.py  test_langgraph_routing.py  test_match_status_response.py  test_pii_redaction.py  test_resource_selection.py  test_worker_failure.py
(+7 files in other folders)
