[project]
name = "pelgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "langchain-openai>=0.1.0",
    "packaging>=23.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pytest>=8.0",
    "psycopg[binary]>=3.1",
    "pypdf>=4.2",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
